disable user selection while moving item

--- a/app/(checklists)/[id]/css/styles.module.css
+++ b/app/(checklists)/[id]/css/styles.module.css
@@ -2,4 +2,6 @@
     pointer-events: none;
     overscroll-behavior: none;
     overflow: hidden;
+    user-select: none;
+    -webkit-user-select: none;
 }
